--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-langchain 
-wikipedia 
-langchain-community 
+langchain==0.3.27
+wikipedia
+langchain-community
 langchain-openai
 langchain-anthropic
 python-dotenv
 pydantic
-duckduckgo-search
+duckduckgo-search==8.1.1
+ddgs==9.4.0
